--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
       context: ./basic1
       dockerfile: Dockerfile.run
     ports:
-      - 3333:3333
+      - 3333:5000
     security_opt:
       - apparmor:unconfined
       - seccomp:unconfined
@@ -29,3 +29,14 @@ services:
       context: ./httpserver
     ports:
       - 3335:8080
+
+  adventure:
+    build:
+      context: ./ADVENTURE
+      dockerfile: Dockerfile
+    ports:
+      - 3336:5000
+    security_opt:
+      - apparmor:unconfined
+      - seccomp:unconfined
+    privileged: true
