--- a/ADVENTURE/Dockerfile
+++ b/ADVENTURE/Dockerfile
@@ -6,10 +6,9 @@ RUN apt-get update && apt-get install -y \
 FROM pwn.red/jail
 COPY --from=app / /srv
 
-ENV JAIL_TIME="300"
-ENV JAIL_TMP_SIZE="5M"
+# ENV JAIL_TIME="300"
+# ENV JAIL_TMP_SIZE="5M"
 
-RUN mkdir /srv/app
-COPY *.c *.h Makefile /srv/app/
+# RUN mkdir /srv/app
+# COPY *.c *.h Makefile /srv/app/
 COPY program /srv/app/run
-
